--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build the docker image
-        run: docker build . --file Dockerfile --tag docker-img-ci:$(data +%s)
+        run: docker build . --file Dockerfile --tag docker-img-ci:$(date +%s)
       
