--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test_docker_build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v2
