--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -12,5 +12,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: remove exsiting images
+        run: sudo docker rmi -f $(sudo docker images -a -q)
       - name: Build the docker image
-        run: sudo docker build . --file Dockerfile --tag nodejs-app:latest     
+        run: sudo docker build . --file Dockerfile --tag nodejs-app:latest    
+      - name: Run conainer
+        run: sudo docker run -p 3000:3000 nodejs-app:latest &
