--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Remove exsiting images
+        run: sudo docker rmi -f $(sudo docker images -a -q)
       - name: Build the docker image
         run: sudo docker build . --file Dockerfile --tag nodejs-app:latest    
       - name: Run conainer
