--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -12,9 +12,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Remove exsiting images
-        run: sudo docker rmi -f $(sudo docker images -a -q)
       - name: Build the docker image
         run: sudo docker build . --file Dockerfile --tag nodejs-app:latest    
       - name: Run conainer
-        run: sudo docker run -rm -d -p 3000:3000 nodejs-app:latest 
+        run: nota_container_id=$(sudo docker run -rm -d -p 3000:3000 nodejs-app:latest)
