--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Build the docker image
         run: sudo docker build . --file Dockerfile --tag nodejs-app:latest    
       - name: Run conainer
-        run: nota_container_id=$(sudo docker run -d -p 3000:3000 nodejs-app:latest)
+        run: sudo docker run -d -p 3000:3000 nodejs-app:latest --name nodejs_container
