--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mantine/core": "^4.0.1",
+    "@mantine/hooks": "^4.0.1",
+    "@mantine/next": "^4.0.1",
+    "@mui/icons-material": "^5.5.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
