--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,22 +8,15 @@ on:
 
 jobs:
   build_and_push_to_reg:
-    name: Build and Puch Docker Image to hub
+    name: Build and Push Docker Image to hub
     runs-on: self-hosted
 
     steps:
     - name: Check out the repo
       uses: actions/checkout@v2
-      
-    - name: Log in to Docker Hub
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
     
-    - name: Build and push Docker image
-      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-      with:
-        context: .
-        push: true
-        tags: apnavirk/low-heat:latest
+    - name: Build Docker image
+      run: sudo docker build . --file Dockerfile --tag nodejs-app:latest
+    
+    - name: Push Docker Image
+      run: sudo docker push nodejs-app:latest
