--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mantine/core": "^4.0.1",
+    "@mantine/form": "^4.0.6",
     "@mantine/hooks": "^4.0.1",
     "@mantine/next": "^4.0.1",
     "@mui/icons-material": "^5.5.0",
+    "firebase": "^9.6.8",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.3"
   },
   "devDependencies": {
     "eslint": "8.9.0",
